microwave.css
@font-face 
{
	font-family: "Nevis";
	src: url( "fonts/nevis.ttf" );
}

/* Generated by Font Squirrel (http://www.fontsquirrel.com) on February 7, 2012 12:06:52 AM America/New_York */
@font-face {
    font-family: 'CartoGothicStdBook';
    src: url('fonts/CartoGothicStd-Book-webfont.eot');
    src: url('fonts/CartoGothicStd-Book-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/CartoGothicStd-Book-webfont.woff') format('woff'),
         url('fonts/CartoGothicStd-Book-webfont.ttf') format('truetype'),
         url('fonts/CartoGothicStd-Book-webfont.svg#CartoGothicStdBook') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'CartoGothicStdItalic';
    src: url('fonts/CartoGothicStd-Italic-webfont.eot');
    src: url('fonts/CartoGothicStd-Italic-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/CartoGothicStd-Italic-webfont.woff') format('woff'),
         url('fonts/CartoGothicStd-Italic-webfont.ttf') format('truetype'),
         url('fonts/CartoGothicStd-Italic-webfont.svg#CartoGothicStdItalic') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'CartoGothicStdBold';
    src: url('fonts/CartoGothicStd-Bold-webfont.eot');
    src: url('fonts/CartoGothicStd-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/CartoGothicStd-Bold-webfont.woff') format('woff'),
         url('fonts/CartoGothicStd-Bold-webfont.ttf') format('truetype'),
         url('fonts/CartoGothicStd-Bold-webfont.svg#CartoGothicStdBold') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'CartoGothicStdBoldItalic';
    src: url('fonts/CartoGothicStd-BoldItalic-webfont.eot');
    src: url('fonts/CartoGothicStd-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/CartoGothicStd-BoldItalic-webfont.woff') format('woff'),
         url('fonts/CartoGothicStd-BoldItalic-webfont.ttf') format('truetype'),
         url('fonts/CartoGothicStd-BoldItalic-webfont.svg#CartoGothicStdBoldItalic') format('svg');
    font-weight: normal;
    font-style: normal;

}

html, body, header, section, figure, figcaption > h1, header nav, header h1, ul
{
	margin: 0;
	padding: 0;
}

header, section, figure, figcaption, figure > img
{
	display: block;
}

nav ul li, header h1, header nav, #portfolio > div li
{
	display: inline-block;
}

#portfolio > div h1, #portfolio > div ul, #portfolio div:last-child p
{
	display: inline;
}

body
{
	min-width: 45em;
}

a:link, a:visited, a:hover, a:active
{
	color: inherit;
	text-decoration: none;
}

/* Fix the stupid firefox shit */
a
{
	outline: none;
}

nav, figcaption
{
	font-family: "CartoGothicStdBook";
}


h1, figcaption > h2, #portfolio > div:last-child p
{
	font-family: "Nevis";
	text-transform: uppercase;
	color: white;
}

#portfolio > div:last-child p
{
	text-transform: lowercase;
}

header
{
	padding: 1em 1em .5em 1em;
	background-color: #ff9f57;
}

nav
{
	position: relative;
	top: .5em;
	float: right;
}

ul
{
	list-style: none;
}

nav a
{
	margin-right: .5em;
	font-size: 1.2em;
	height: 100%;
}

nav a:after
{
	content: ".";
}



/* Slideshow images */
figure
{
	height: 36em;
	width: 50em;
	margin: 0 auto;
}

#portfolio > div:first-child
{
	height: 36em;
	width: 50em;
	margin: 0 auto;
	margin-top: 2em;
	margin-bottom: 5em;
}

figure > img
{
	margin: 0 auto;
	border: 1.5em #ff9f57 solid;
}

figcaption
{
	position: relative;
	width: 25em;
	margin: 0 auto;
	padding: 2em 2em .5em 2em;
	margin-top: -1em;
	z-index: -1;
	border: 1px black solid;
}


figcaption, figcaption > h2, nav
{
	color: #4d4d4d;
}

figcaption p
{
	font-size: 1em;
}

figcaption span
{
	font-style: italic;
	display: block;
	margin-top: .5em;
}

section#portfolio > div:last-child
{
	/*width: 90%;*/
	/*height: 7em;*/
	padding: 1em;
	background-color: #4d4d4d;
}

section#portfolio > div:last-child li
{
	margin-right: 1.5em;
}

#portfolio > div:last-child p
{
	width: 20em;
	margin: 2em 5em;
}

#portfolio > div:last-child ul
{
	display: block;
	margin-bottom: .5em;
}

/* Contains the circles */
#portfolio > div:last-child div
{
  display: inline-block;
  margin: 0 auto;
  width: 55em;
}

#rightArrow, #leftArrow
{
	width: 3em;
	position: relative;
	top: -7em;
}

#rightArrow
{
	left: -5em;
	float: right;
}

#leftArrow
{
	left: 5em;	
}

/* SVG */
svg
{
	fill: white;
}

svg:hover
{
	fill: #ff9f57;
}

